<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/margin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/title"/>
    <RelativeLayout
        android:layout_marginTop="@dimen/_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="@color/black"
            android:textSize="@dimen/body"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/disease_name"
            android:textColor="@color/black"
            android:textSize="@dimen/body"/>
    </RelativeLayout>
    <TextView
        android:layout_marginTop="@dimen/_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/disease_desc"
        android:textColor="@color/black"
        android:textSize="@dimen/body"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12"
        android:layout_gravity="right">
        <TextView
            android:id="@+id/txt_disagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disagree"
            android:textColor="@color/grayDark"
            android:textSize="@dimen/btn_size"/>
        <TextView
            android:id="@+id/txt_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginStart="@dimen/_12"
            android:layout_marginLeft="@dimen/_12"
            android:text="@string/agree"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/btn_size"/>
    </LinearLayout>
</LinearLayout>