<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_change_time"
        android:textColor="@color/black"
        android:textSize="@dimen/title" />

    <RadioGroup
        android:id="@+id/radio_duty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_duty1" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_duty2" />
    </RadioGroup>

    <HorizontalScrollView
        android:layout_marginTop="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/radio_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/rbtn_mon"
                    style="@style/AppTheme.Button"
                    android:layout_width="@dimen/radio_size"
                    android:layout_height="@dimen/radio_size"
                    android:button="@null"
                    android:text="@string/mon"
                    android:checked="false"/>

                <CheckBox
                    android:id="@+id/rbtn_tue"
                    style="@style/AppTheme.Button"
                    android:layout_width="@dimen/radio_size"
                    android:layout_height="@dimen/radio_size"
                    android:button="@null"
                    android:layout_marginLeft="@dimen/_12"
                    android:layout_marginStart="@dimen/_12"
                    android:text="@string/tue"
                    android:checked="false"/>
                <CheckBox
                    android:id="@+id/rbtn_wed"
                    style="@style/AppTheme.Button"
                    android:layout_width="@dimen/radio_size"
                    android:layout_height="@dimen/radio_size"
                    android:button="@null"
                    android:layout_marginLeft="@dimen/_12"
                    android:layout_marginStart="@dimen/_12"
                    android:text="@string/wed"
                    android:checked="false"/>
                <CheckBox
                    android:id="@+id/rbtn_tur"
                    style="@style/AppTheme.Button"
                    android:layout_width="@dimen/radio_size"
                    android:layout_height="@dimen/radio_size"
                    android:button="@null"
                    android:layout_marginLeft="@dimen/_12"
                    android:layout_marginStart="@dimen/_12"
                    android:text="@string/tur"
                    android:checked="false"/>
                <CheckBox
                    android:id="@+id/rbtn_fri"
                    style="@style/AppTheme.Button"
                    android:layout_width="@dimen/radio_size"
                    android:layout_height="@dimen/radio_size"
                    android:button="@null"
                    android:layout_marginLeft="@dimen/_12"
                    android:layout_marginStart="@dimen/_12"
                    android:text="@string/fri"
                    android:checked="false"/>
                <CheckBox
                    android:id="@+id/rbtn_sat"
                    style="@style/AppTheme.Button"
                    android:layout_width="@dimen/radio_size"
                    android:layout_height="@dimen/radio_size"
                    android:button="@null"
                    android:layout_marginLeft="@dimen/_12"
                    android:layout_marginStart="@dimen/_12"
                    android:text="@string/sat"
                    android:checked="false"/>
                <CheckBox
                    android:id="@+id/rbtn_sun"
                    style="@style/AppTheme.Button"
                    android:layout_width="@dimen/radio_size"
                    android:layout_height="@dimen/radio_size"
                    android:button="@null"
                    android:layout_marginLeft="@dimen/_12"
                    android:layout_marginStart="@dimen/_12"
                    android:text="@string/sun"
                    android:checked="false"/>
            </RadioGroup>
        </LinearLayout>
    </HorizontalScrollView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_gravity="right">
        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grayDark"
            android:textSize="@dimen/btn_size"
            android:text="@string/btn_cancel"/>
        <TextView
            android:id="@+id/txt_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/btn_size"
            android:layout_marginLeft="@dimen/_12"
            android:layout_marginStart="@dimen/_12"
            android:text="@string/btn_update"/>
    </LinearLayout>
</LinearLayout>